--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -7,7 +7,7 @@
     overflow: hidden;
     background-color: #e84821;
     color: #fffbf4;
-    font-size: .78rem;
+    font-size: 1.2rem;
 }
 
 .block{
