--- a/src/style/partials/_fonts.scss
+++ b/src/style/partials/_fonts.scss
@@ -8,3 +8,12 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Lateef';
+    src: url('../../assets/font/Lateef.woff2') format('woff2'),
+        url('../../assets/font/Lateef.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
