--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -64,18 +64,19 @@
 
     &__body{
         margin-top: 2rem;
+        text-align: start;
     }
 
     &__block{
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
 
         &--row{
             flex-direction: row;
+            justify-content: start;
         }
     }
 
