--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -77,6 +77,7 @@
         &--row{
             flex-direction: row;
             justify-content: start;
+            align-items: center;
         }
     }
 
@@ -106,10 +107,9 @@
         border-radius: 3px;
         padding: .7rem;
         margin: 1rem;
-        width: 10rem;
-        font-size: 1.4rem;
+        width: 50%;
+        font-size: 1rem;
         text-transform: uppercase;
-        transform: scale(.8);
     }
 }
 
