--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -109,6 +109,10 @@
         width: 50%;
         font-size: 1rem;
         text-transform: uppercase;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
     }
 }
 
