--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -109,6 +109,10 @@
         width: 50%;
         font-size: 1rem;
         text-transform: uppercase;
+
+        &:hover{
+            background-color: #9e2d10;
+        }
     }
 }
 
