--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -58,7 +58,7 @@
         }
 
         &--small{
-            font-size: .8rem;
+            font-size: 1rem;
         }
     }
 
@@ -82,22 +82,25 @@
     }
 
     &__label{
-
         &--title{
             font-weight: bold;
             text-transform: uppercase;
-            margin-right: .7rem;
         }
     }
 
     &__input{
         background-color: transparent;
         border-radius: 3px;
-        border: 1px solid #DD3D14;
+        border: none;
+        border-bottom: 1px solid #DD3D14;
         width: 50%;
-        padding: .3rem;
-        font-size: 1rem;
         color: rgb(61, 61, 61);
+        margin-left: .5rem;
+        text-align: center;
+
+        &--number{
+            width: 15%;
+        }
     }
 
     &__submit{
