--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -13,7 +13,8 @@
 .clickHere{
     display: block;
     width: 100%;
-    font-size: 3rem;
+    font-size: 2rem;
     padding: 1rem;
+    font-family: 'DXB';
     text-align: center;
 }
