--- a/src/components/Web/Web.scss
+++ b/src/components/Web/Web.scss
@@ -53,15 +53,20 @@
     padding: 1.5rem;
     margin: 1rem;
     color: #fdecec;
-    border: solid white 1px;
-    
+
+    &__radio{
+        position: absolute;
+        right: -1rem;
+    }
+
     &__title{
         color: #886c35;
         
 
         &--large{
-            font-size: 2rem;
-            margin-bottom: -1rem;
+            font-size: 1.5rem;
+            margin-bottom: -.3rem;
+            font-family: Montserrat;
         }
 
         &--small{
@@ -94,8 +99,8 @@
             font-weight: bold;
             text-transform: uppercase;
             font-size: .7rem;
-
-        color: #886c35;
+            font-family: Montserrat;
+            color: #886c35;
 
         }
     }
@@ -103,29 +108,31 @@
     &__input{
         background-color: transparent;
         border-radius: 3px;
-        border: 1px solid #886c35;
-        width: 50%;
+        border: none;
+        border-bottom: 1px solid #886c35;
+        width: 75%;
         color: rgb(61, 61, 61);
         margin-left: .5rem;
         text-align: center;
 
         &--number{
-            width: 15%;
+            width: 30%;
         }
     }
 
     &__submit{
-        color: #886c35;
-        background-color: #fdecec;
-        border: 1px solid white;
-        padding: .7rem;
-        margin: 1rem;
-        width: 50%;
-        font-size: 1rem;
+        background-color: #886c35;
+        color:#fdecec;
+        padding: .2rem .9rem;
+        border-radius: 3px;
+        font-size: .7rem;
+        border: none;
+        font-family: Montserret;
         text-transform: uppercase;
+        margin-top: 1rem;
 
         &:hover{
-            background-color: #cba28e;
+            background-color: #675227;
         }
     }
 }
@@ -185,6 +192,10 @@
         margin-top: 2.5rem;
         margin-bottom: 1rem;
     }
+
+    &__parking{
+        margin-top: 1.2rem;
+    }
 }
 
 .map{
@@ -192,6 +203,11 @@
     color:#fdecec;
     list-style: none;
     text-decoration: none;
-    padding: 0rem .6rem;
-    font-size: 1rem;
+    padding: .2rem .9rem;
+    border-radius: 3px;
+    font-size: .7rem;
+
+    &:hover{
+        background-color: #675227;
+    }
 }
