--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    position: relative;
   }
  
   .carousel-image {
@@ -11,16 +10,26 @@
     max-height: 400px; /* Adjust the height as needed */
     margin: 10px 0;
   }
-  
-  .thumbnails {
+
+  .thumbnail-row {
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    justify-content: space-between;
+    flex-basis: calc(16.666% - 10px); /* 6 thumbnails per row with spacing */
+    margin: 10px;
   }
+  
+.thumbnail {
+  max-width: 100%;
+  max-height: 100%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  border: 1px solid #ddd;
+}
+
   
   .thumbnail {
     width: 13%; /* Adjust the width of each thumbnail as needed */
-    margin: 0 5px;
+    margin: 0 7px;
     cursor: pointer;
     border: 1px solid #ddd;
     transition: all 0.3s ease;
