--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -14,7 +14,6 @@
   .thumbnail-row {
     display: flex;
     justify-content: space-between;
-    flex-basis: calc(16.666% - 10px); /* 6 thumbnails per row with spacing */
     margin: 10px;
   }
   
@@ -29,12 +28,12 @@
   
   .thumbnail {
     width: 13%; /* Adjust the width of each thumbnail as needed */
-    margin: 0 7px;
+    margin: 0 13px;
     cursor: pointer;
     border: 1px solid #ddd;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease-in-out;
   }
   
   .thumbnail.active {
-    transform: rotate(15deg);
+    transform: rotate(15deg) translateX(-5px) translateY(5px);
   }
