--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -17,23 +17,16 @@
     margin: 10px;
   }
   
-.thumbnail {
-  max-width: 100%;
-  max-height: 100%;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  border: 1px solid #ddd;
-}
-
-  
   .thumbnail {
     width: 13%; /* Adjust the width of each thumbnail as needed */
     margin: 0 13px;
     cursor: pointer;
     border: 1px solid #ddd;
+    -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
   
   .thumbnail.active {
-    transform: rotate(15deg) translateX(-5px) translateY(5px);
+    -webkit-transform: rotate(15deg);
+    transform: rotate(15deg);
   }
